# eqcutil

./: .gitignore  README.md  demo.py  environment.yml  pyproject.toml  requirements.txt  setup.py
demo/: demo.py  mt_baker_catalog.xml
docs/: xcorr_notes.ipynb
eqc_utils/: catalog.py  clustering.py  logging.py  template.py
eqcorrscan_utils/: cake.py  catalog.py  clustering.py  eventbank.py  logging.py  snuffler.py  template.py  waveforms.py
eqcorrscan_utils/augment/: cake.py
eqcorrscan_utils/classes/: clusteringtribe.py
eqcorrscan_utils/client/: wavebank.py
eqcorrscan_utils/io/: quakemigrate.py
eqcorrscan_utils/process/: clustering.py
eqcorrscan_utils/util/: decorators.py
eqcorrscan_utils/visualize/: dendrogram.py  snuffler.py
eqcutil/: __init__.py
eqcutil/augment/: cake.py  catalog.py  template.py
eqcutil/catalog/: metadata.py  model_phases.py
eqcutil/core/: clienttemplate.py  clusteringtribe.py  grouper.py  load_from_bank.py  raytracer.py
eqcutil/data/velocity_models/P5/: P5_P_2023.del
eqcutil/io/: quakemigrate.py  template_cluster.py
eqcutil/process/: clustering.py  template_info.py  weighted_clustering.py
eqcutil/tests/: basic_tribe.tgz  catalog.xml  clusteringtribe.py
eqcutil/tests/core/: catalog.xml  clusteringtribe.py
eqcutil/tests/io/: 20231227094351697.event  20231227094351697.picks  test_quakemigrate.py
eqcutil/tests/process/: test_weighted_clustering.py
eqcutil/util/: logging.py  pandas.py
eqcutil/viz/: eqc_compat.py
files/QUAKE/BANK/1969/: uw10835733.xml
files/QUAKE/BANK/1973/: uw10857743.xml  uw10857783.xml
files/QUAKE/BANK/1977/: uw10845458.xml
files/QUAKE/BANK/1979/: uw10849148.xml  uw10849673.xml  uw10850003.xml  uw10850658.xml  uw10851178.xml
files/QUAKE/BANK/1980/: uw10075123.xml  uw10079893.xml  uw10080228.xml  uw10082063.xml  uw10082228.xml  uw10086078.xml  uw10088603.xml  uw10088728.xml  uw10091478.xml  uw10095628.xml
files/QUAKE/BANK/1981/: uw10096928.xml  uw10098183.xml  uw10098638.xml  uw10099248.xml  uw10100963.xml  uw10102378.xml  uw10103123.xml  uw10105308.xml  uw10105708.xml  uw10106588.xml  uw10106613.xml  uw10107463.xml  uw10107608.xml  uw10110263.xml  uw10110308.xml  uw10111343.xml  uw10111358.xml  uw10112323.xml  uw10113158.xml  uw10114458.xml  uw10114538.xml  uw10114848.xml  uw10116578.xml  uw10116623.xml  uw10117643.xml  uw10118373.xml  uw10119373.xml  uw10119608.xml  uw10119713.xml  uw10119823.xml  uw10121748.xml  uw10128793.xml  uw10129048.xml
files/QUAKE/BANK/1982/: uw10126378.xml  uw10128578.xml  uw10128633.xml  uw10135013.xml  uw10139658.xml  uw10144053.xml  (+1 more)
(+1416 files in other folders)
