[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eqcutil"
version = "0.0.0"
authors = [{name="Nathan T. Stevens", email="ntsteven@uw.edu"},
           {name="Barrett Johnson", email="bnjo@uw.edu"}]
requires-python = ">=3.9"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: GNUv3 :: GNU General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "cython",
    "numpy<2",
    "scipy",
    "obspy",
    "pandas",
    "obsplus",
    "eqcorrscan",
    "pyrocko",
    "pytest",
    "pyqt5",
    "pyqtwebengine"
]

[tool.setuptools.packages.find]
include = ["eqcutil*"]

[project.urls]
GitHub = "https://github.com/pnsn/eqcutils"
PNSN = "https://pnsn.org"